integrated across files and fixed bugs

--- a/FrontEnd/AddInhaler.html
+++ b/FrontEnd/AddInhaler.html
@@ -105,7 +105,7 @@
 
           <section class="frame-parent7">
             <header class="statistics-parent10">
-              <h1 class="add-inhalermodify-inhaler1">Dosage Prescription</h1>
+              <h1 class="add-inhalermodify-inhaler1">Dosage Reminder</h1>
               <button class="plus-math-wrapper" id="addReminderBtn">
                 <img
                   class="inhaler-icon20"
@@ -122,7 +122,7 @@
                   src="./public/alarm@2x.png"
                 />
 
-                <h3 class="inhaler-name1">Dose 1</h3>
+                <h3 class="inhaler-name1">Dose</h3>
               </div>
               <input class="frame-child1" placeholder="Time" type="number" />
             </div>
