Refactor the pages and added the code to connect the sign-up page to Firebase with Auth

--- a/AsthMapp/html/ForgotPassword.html
+++ b/AsthMapp/html/ForgotPassword.html
@@ -27,7 +27,7 @@
                     src="../assets/AsthmappLogoDark@2x.png"
             />
 
-            <h1 class="logintitle" id="h1_ogIn">Log In</h1>
+            <h1 class="logintitle" id="h1_ogIn">Forgot Password</h1>
         </header>
     </header>
     <section class="alert-notification-main2 hide" id="errorSection">
@@ -74,49 +74,20 @@
                     </div>
                 </div>
             </section>
-            <section class="password4" id="sectionPassword">
-                <div class="input-fields6">
-                    <h2 class="name7" id="h2_Password">Password</h2>
-                    <div class="content19">
-                        <div class="text36">
-                            <img
-                                    class="passwordicon3"
-                                    alt=""
-                                    src="../assets/passwordicon.svg"
-                            />
-
-                            <input
-                                    class="loremus-ipsumus-d7"
-                                    id = "passwordInput"
-                                    name="passwordLog"
-                                    placeholder="********"
-                                    type="password"
-                            />
-                        </div>
-                        <button class="solid-eye3" id="PasswordEye1">
-                            <img
-                                    class="vector-icon12"
-                                    alt=""
-                                    src="../assets/eye-password@2x.png"
-                            />
-                        </button>
-                    </div>
-                </div>
             </section>
-        </section>
-        <button class="button-primary7" autofocus="{true}" id="signInBtn">
+        <button class="button-primary7" autofocus="{true}" id="resetPasswordBtn">
             <div class="button-primary8">
                 <div class="content20">
-                    <b class="text38">Sign In</b>
+                    <b class="text38">Reset Password</b>
                 </div>
             </div>
         </button>
-        <button class="bottom-links" id="forgotPasswordPageBtn">
-            <div class="text41">Forgot password?</div>
+        <button class="bottom-links" id="signInPageBtn">
+            <div class="text41">Already registered?</div>
             <div class="text42" id="">
                 <div class="text43">
                     <span class="span2"> </span>
-                    <span class="sign-up7">Reset.</span>
+                    <span class="sign-up7">Sign In.</span>
                 </div>
             </div>
         </button>
